--- a/leaderboard.html
+++ b/leaderboard.html
@@ -10,7 +10,7 @@
 <template name="leaderboard">
 	<ul>
 		{{#each player}}
-			<li>{{name}} : {{score}}</li>
+			<li class="player {{selectedClass}}">{{name}} : {{score}}</li>
 		{{/each}}
 	</ul>
 	<p>{{otherHelperFunction}}</p>
