Added inc/dec buttons and username sorting

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -12,7 +12,13 @@
 		{{#each player}}
 			<li class="player {{selectedClass}}">{{name}} : {{score}}</li>
 		{{/each}}
+
+		{{#if showSelectedPlayer}}
+		<li>Selected Player: {{showSelectedPlayer.name}}</li>
+		{{/if}}
 	</ul>
+	<input type="button" class="increment" value="Give 5 points" />
+	<input type ="button" class="decrement" value="Take 5 Points" />
 	<p>{{otherHelperFunction}}</p>
 	<p> Total Players : {{count}}</p>
 </template>
