--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,6 +5,7 @@
 <body>
 	<h1>Leaderboard</h1>
 	{{> leaderboard}}
+	<div id="gg">{{> loginButtons}}</div>
 </body>
 
 <template name="leaderboard">
@@ -28,9 +29,11 @@
 </template>
 	
 <template name="addPlayerForm">
+	{{#if currentUser}}
 	<form>
 		<input type="text" name="playerName">
 		<input type="submit" value="Add Player">
 	</form>
+	{{/if}}
 </template>
 
